# fcjson-latex

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-documentation.yml  pre-commit-ci.yml  smoke-test.yml  testing-and-coverage.yml
docs/: conf.py  index.rst
src/: .pylintrc
tests/fcjson/: test_example_module.py
